# wordlists

./: README.md  pyproject.toml
wordlists/: __init__.py  wordlist.py
